<resources>
    <string name="app_name">TallerQuiz</string>
    <string name="str_1">Mike Creative Mints</string>
    <string name="str_2">UI/UX designer KREATIVE</string>
    <string name="str_3">iOS / Game Marking of game concenpt</string>
    <string name="str_4">Game design, illustration , iOS Fine Digital art</string>
    <string name="str_5">24K</string>
    <string name="str_6">73K</string>
    <string name="str_7">345</string>
</resources>
