<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.i012114.tallerquiz.MainActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_radius"
            android:padding="10dp"
            >
        <RelativeLayout
    android:id="@+id/rl_1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:id="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img1"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/txt_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_1"
        android:layout_toRightOf="@id/img1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorNegro"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id="@+id/txt_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_2"
        android:layout_alignLeft="@id/txt_1"
        android:layout_below="@id/txt_1"
        android:textSize="20sp"
        />
</RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_2"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_below="@id/rl_1"
                android:layout_marginTop="10dp"
                >

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@drawable/img2"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_toRightOf="@id/img2"
                    android:background="@drawable/border"
                    >
                    <TextView
                        android:id="@+id/txt_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_3"
                        android:textStyle="bold"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:textSize="20sp"
                        android:textColor="@color/colorNegro"
                        android:layout_marginLeft="10dp"
                        />

                    <TextView
                        android:id="@+id/txt_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_4"
                        android:layout_below="@id/txt_3"
                        android:layout_alignLeft="@id/txt_3"
                        android:layout_marginTop="10dp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/border">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <ImageView
                                android:id="@+id/img3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/icons8_me_gusta_48"
                                />

                            <TextView
                                android:id="@+id/txt_5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/str_5"
                                android:layout_toRightOf="@id/img3"
                                android:layout_centerVertical="true"
                                />

                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <ImageView
                                android:id="@+id/img4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/icons8_me_gusta_48"
                                />

                            <TextView
                                android:id="@+id/txt_"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/str_6"
                                android:layout_toRightOf="@id/img4"
                                android:layout_centerVertical="true"
                                />

                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <ImageView
                                android:id="@+id/img5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/icons8_me_gusta_48"
                                />

                            <TextView
                                android:id="@+id/txt_7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/str_7"
                                android:layout_toRightOf="@id/img5"
                                android:layout_centerVertical="true"
                                />

                        </RelativeLayout>
                    </LinearLayout>
                </RelativeLayout>


            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>


</ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@drawable/icons8_m_s_48"
        />

</android.support.design.widget.CoordinatorLayout>
